WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135549
REGRESSION: OS marketing version in iOS Simulator user-agent string is the host OS’s
https://bugs.webkit.org/show_bug.cgi?id=135549
Summary
REGRESSION: OS marketing version in iOS Simulator user-agent string is the ho...
mitz
Reported
2014-08-03 11:50:45 PDT
The OS marketing version number included in the default user-agent string is the OS X version of the host. It should be the iOS version of the Simulator.
Attachments
Locate System/Library relative to the Simulator root
(1.80 KB, patch)
2014-08-03 11:58 PDT
,
mitz
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2014-08-03 11:55:58 PDT
<
rdar://problem/17897271
>
mitz
Comment 2
2014-08-03 11:58:41 PDT
Created
attachment 235947
[details]
Locate System/Library relative to the Simulator root
Mark Rowe (bdash)
Comment 3
2014-08-03 12:18:50 PDT
Comment on
attachment 235947
[details]
Locate System/Library relative to the Simulator root I'm surprised that NSSearchPathForDirectoriesInDomains(NSLibraryDirectory, NSSystemDomainMask, YES) doesn't do the right thing automatically for iOS.
mitz
Comment 4
2014-08-03 12:19:05 PDT
<
rdar://problem/17782529
>
mitz
Comment 5
2014-08-03 12:22:25 PDT
Fixed in <
http://trac.webkit.org/r171984
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug