<rdar://problem/17782529> REGRESSION: OS marketing version in iOS Simulator user-agent string is the host OS’s https://bugs.webkit.org/show_bug.cgi?id=135549

Reviewed by Mark Rowe.

* platform/cocoa/SystemVersion.mm:
(WebCore::createSystemMarketingVersion): On the iOS Simulator, locate the system Library
directory relative to the Simulator root.



Canonical link: https://commits.webkit.org/153428@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171984 268f45cc-cd09-0410-ab3c-d52691b4dbfc