Source/WebCore/platform/cocoa/SystemVersion.mm
@@ -33,6 +33,10 @@ static NSString *createSystemMarketingVersion()
 {
     // Can't use -[NSProcessInfo operatingSystemVersionString] because it has too much stuff we don't want.
     NSString *systemLibraryPath = [NSSearchPathForDirectoriesInDomains(NSLibraryDirectory, NSSystemDomainMask, YES) objectAtIndex:0];
+#if PLATFORM(IOS_SIMULATOR)
+    if (char *simulatorRoot = getenv("SIMULATOR_ROOT"))
+        systemLibraryPath = [NSString stringWithFormat:@"%s/%@", simulatorRoot, systemLibraryPath];
+#endif
     NSString *systemVersionPlistPath = [systemLibraryPath stringByAppendingPathComponent:@"CoreServices/SystemVersion.plist"];
     NSDictionary *systemVersionInfo = [NSDictionary dictionaryWithContentsOfFile:systemVersionPlistPath];
     return [[systemVersionInfo objectForKey:@"ProductVersion"] copy];
